# cufp2011

./: .gitignore  LICENSE  README  README.md  snap-chat.cabal
examples/: JsonExample.hs
exe-src/Snap/Chat/: Main.hs
lib-src/Snap/Chat/: ChatRoom.hs  Types.hs
lib-src/Snap/Chat/API/: Handlers.hs  Types.hs
lib-src/Snap/Chat/Internal/: Types.hs
lib-src/Snap/Chat/Internal/API/: Types.hs
sample-implementation/Snap/Chat/API/: Handlers.hs
sample-implementation/Snap/Chat/Internal/: Types.hs
sample-implementation/Snap/Chat/Internal/API/: Types.hs
src/Snap/Chat/: ChatRoom.hs  Main.hs  Message.hs
src/Snap/Chat/API/: Handlers.hs
src/Snap/Chat/Internal/: Types.hs  Util.hs
src/Snap/Chat/Internal/API/: Types.hs
src/System/: TimeoutManager.hs
static/: index.html
static/css/: .#chat.css  chat-large.css  chat-small.css  chat.css
static/js/: snap-chat.js
test/: runTestsAndCoverage-sample.sh  runTestsAndCoverage.sh  snap-chat-testsuite.cabal
test/suite/: TestSuite.hs
test/suite/Snap/Chat/ChatRoom/: Tests.hs
test/suite/Snap/Chat/Internal/API/: Tests.hs
test/suite/Snap/Chat/Test/: Common.hs
test/suite/Snap/Chat/Types/: Tests.hs
