Name:                snap-chat
Version:             0.1
License:             BSD3
License-file:        LICENSE
Author:              Gregory Collins
Maintainer:          greg@gregorycollins.net
Copyright:           (c) 2011 Google, Inc.
Category:            Web
Build-type:          Simple

Extra-source-files:
  README,
  test/suite/TestSuite.hs,
  test/suite/Snap/Chat/ChatRoom/Tests.hs,
  test/suite/Snap/Chat/Test/Common.hs,
  test/suite/Snap/Chat/Types/Tests.hs,
  test/runTestsAndCoverage.sh,
  test/snap-chat-testsuite.cabal

Cabal-version:       >=1.2

Library
  hs-source-dirs: lib-src

  Build-depends:       base              >= 4.2   && < 5,
                       aeson             >= 0.3   && < 0.4,
                       attoparsec        >= 0.9   && < 0.10,
                       base16-bytestring >= 0.1   && < 0.2,
                       bytestring        >= 0.9   && < 0.10,
                       containers        >= 0.4   && < 0.5,
                       hashtables        >= 1.0   && < 1.1,
                       mwc-random        >= 0.10  && < 0.11,
                       snap-core         >= 0.5.3 && < 0.6,
                       stm               >= 2.2   && < 2.3,
                       text              >= 0.11  && < 0.12,
                       unix-compat       >= 0.2   && < 0.4

  Exposed-Modules:     Snap.Chat.Types,
                       Snap.Chat.ChatRoom,
                       Snap.Chat.Message
  Other-modules:       Snap.Chat.Internal.Types,
                       Snap.Chat.Internal.Util,
                       System.TimeoutManager

  ghc-options: -O2 -Wall -fhpc -fwarn-tabs -funbox-strict-fields -threaded
               -fno-warn-unused-do-bind


Executable snap-chat
  hs-source-dirs: exe-src lib-src

  Main-is:             Snap/Chat/Main.hs

  Build-depends:       base              >= 4.2   && < 5,
                       aeson             >= 0.3   && < 0.4,
                       base16-bytestring >= 0.1   && < 0.2,
                       bytestring        >= 0.9   && < 0.10,
                       containers        >= 0.4   && < 0.5,
                       hashtables        >= 1.0   && < 1.1,
                       mwc-random        >= 0.10  && < 0.11,
                       snap-core         >= 0.5.3 && < 0.6,
                       snap-server       >= 0.5.3 && < 0.6,
                       stm               >= 2.2   && < 2.3,
                       text              >= 0.11  && < 0.12,
                       unix-compat       >= 0.2   && < 0.4

  ghc-options: -O2 -Wall -fhpc -fwarn-tabs -funbox-strict-fields -threaded
               -fno-warn-unused-do-bind
