Name:                snap-chat
Version:             0.1
License:             BSD3
License-file:        LICENSE
Author:              Gregory Collins
Maintainer:          greg@gregorycollins.net
Copyright:           (c) 2011 Google, Inc.
Category:            Web
Build-type:          Simple

Extra-source-files:
  README.md,
  test/suite/TestSuite.hs,
  test/suite/Snap/Chat/ChatRoom/Tests.hs,
  test/suite/Snap/Chat/Internal/API/Tests.hs,
  test/suite/Snap/Chat/Test/Common.hs,
  test/suite/Snap/Chat/Types/Tests.hs,
  test/runTestsAndCoverage.sh,
  test/runTestsAndCoverage-sample.sh,
  test/snap-chat-testsuite.cabal

Cabal-version:       >=1.2

Executable snap-chat
  hs-source-dirs: src

  Main-is:             Snap/Chat/Main.hs

  Build-depends:       base                      >= 4.2   && < 5,
                       aeson                     >= 0.3   && < 0.4,
                       attoparsec                >= 0.9   && < 0.10,
                       base16-bytestring         >= 0.1   && < 0.2,
                       bytestring                >= 0.9   && < 0.10,
                       clientsession             >= 0.7   && < 0.8,
                       containers                >= 0.4   && < 0.5,
                       hashtables                >= 1.0   && < 1.1,
                       MonadCatchIO-transformers >= 0.2   && <0.3,
                       mtl                       >= 2.0   && < 3.0,
                       mwc-random                >= 0.10  && < 0.11,
                       snap-core                 >= 0.5.3 && < 0.6,
                       snap-server               >= 0.5.3 && < 0.6,
                       stm                       >= 2.2   && < 2.3,
                       text                      >= 0.11  && < 0.12,
                       unix-compat               >= 0.2   && < 0.4

  ghc-options: -O2 -Wall -fwarn-tabs -funbox-strict-fields -threaded
               -fno-warn-unused-do-bind


Executable snap-chat-sample
  hs-source-dirs: sample-implementation src

  Main-is:             Snap/Chat/Main.hs

  Build-depends:       base                      >= 4.2   && < 5,
                       aeson                     >= 0.3   && < 0.4,
                       attoparsec                >= 0.9   && < 0.10,
                       base16-bytestring         >= 0.1   && < 0.2,
                       bytestring                >= 0.9   && < 0.10,
                       clientsession             >= 0.7   && < 0.8,
                       containers                >= 0.4   && < 0.5,
                       hashtables                >= 1.0   && < 1.1,
                       MonadCatchIO-transformers >= 0.2   && <0.3,
                       mtl                       >= 2.0   && < 3.0,
                       mwc-random                >= 0.10  && < 0.11,
                       snap-core                 >= 0.5.3 && < 0.6,
                       snap-server               >= 0.5.3 && < 0.6,
                       stm                       >= 2.2   && < 2.3,
                       text                      >= 0.11  && < 0.12,
                       unix-compat               >= 0.2   && < 0.4

  ghc-options: -O2 -Wall -fwarn-tabs -funbox-strict-fields -threaded
               -fno-warn-unused-do-bind
               
