name:           snap-chat-testsuite
version:        1.0
build-type:     Simple
cabal-version:  >= 1.6

Executable testsuite
  hs-source-dirs:  ../lib-src suite
  main-is:         TestSuite.hs

  Build-depends:
      base                       >= 4.2     && < 5,
      HUnit                      >= 1.2     && < 2,
      QuickCheck                 >= 2.3.0.2 && < 3.0,
      MonadCatchIO-transformers  >= 0.2     && < 0.3,
      aeson                      >= 0.3     && < 0.4,
      attoparsec                 >= 0.9     && < 0.10,
      base16-bytestring          >= 0.1     && < 0.2,
      bytestring                 >= 0.9     && < 0.10,
      containers                 >= 0.4     && < 0.5,
      deepseq                    >= 1.1     && < 1.2,
      hashtables                 >= 1.0     && < 1.1,
      mtl                        >= 2       && < 3,
      mwc-random                 >= 0.10    && < 0.11,
      snap-core                  >= 0.5.3   && < 0.6,
      stm                        >= 2.2     && < 2.3,
      test-framework             >= 0.4     && < 0.5,
      test-framework-hunit       >= 0.2.5   && < 0.3,
      test-framework-quickcheck2 >= 0.2.6   && < 0.3,
      text                       >= 0.11    && < 0.12,
      unix-compat                >= 0.2     && < 0.4

  ghc-options: -O2 -Wall -fhpc -fwarn-tabs -funbox-strict-fields -threaded
               -fno-warn-unused-do-bind
